--- a/Tasks/src/main/resources/application.properties
+++ b/Tasks/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 spring.application.name=tasks
 management.endpoints.web.exposure.include=*
-server.port=9094
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-#eureka.client.region=default
-#eureka.client.registryFetchIntervalSeconds=5
-#
-#spring.data.mongodb.database=local
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+# disable driver's feature detection
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
-#spring.data.mongodb.uri=mongodb+srv://vikash:vikash@taskfirst-te0tv.mongodb.net/tasks
+# without detection you have to set the dialect by hand
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-#DealOfTheDay=13 percent off
+ 
+spring.datasource.url=jdbc:postgresql://localhost:5432/tasks
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
