--- a/Tasks/pom.xml
+++ b/Tasks/pom.xml
@@ -28,6 +28,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.tasks</groupId>
+			<artifactId>security</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
