--- a/Tasks/src/main/resources/application.properties
+++ b/Tasks/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tasks
 management.endpoints.web.exposure.include=*
-server.port=8080
+server.port=9051
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
 
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.url=jdbc:postgresql://localhost:5432/tasks
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
+
+spring.jpa.show-sql=true
