--- a/Tasks/src/main/resources/application.properties
+++ b/Tasks/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=tasks
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 server.port=9051
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driverClassName=org.postgresql.Driver
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -10,11 +10,21 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # without detection you have to set the dialect by hand
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
- 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tasks
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+
+
+### Postgres 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/tasks
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+
+### SQL server 
+spring.datasource.url=jdbc:sqlserver://localhost:49696;databaseName=tasks
+spring.datasource.username=sa
+spring.datasource.password=India@12345
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
