--- a/security/pom.xml
+++ b/security/pom.xml
@@ -13,16 +13,18 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
+     	<maven.compiler.source>${java.version}</maven.compiler.source>
+     	<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>2.0.1.RELEASE</version>
+			<version>2.6.6</version>
 			<type>pom</type>
-			<scope>import</scope>
+
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
